--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
     <div id="similarListings"></div>
     <div id="reviews"></div>
-    <!-- <script src="/lib/react.development.js"></script>
-    <script src="/lib/react-dom.development.js"></script> -->
+    <script src="/lib/react.development.js"></script>
+    <script src="/lib/react-dom.development.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/fec-lulumelon/bundle.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/reviewsmodulejon/bundle.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/lubucket3003/bundle.js"></script>
